<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF">
    <!--adViewLayout为广告条容器-->
    <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />
   <HorizontalScrollView 
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="5dip"
           android:orientation="horizontal"
           >
		<Button 
		    android:id="@+id/playRawAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/play_raw_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playFileAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/play_file_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playNetworkAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/play_network_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playStartBackgroundAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/start_background_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playStopBackgroundAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/stop_background_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/startPreviewPictureButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/startPreviewPicture"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/startPreviewVideoButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/startPreviewVideo"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
       </LinearLayout>
   </HorizontalScrollView>
   <ScrollView 
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >
           <FrameLayout 
			    android:id="@+id/camera_preview" 
    			android:layout_width="match_parent" 
    			android:layout_height="200dip" 
    			android:layout_weight="1" 
    			/>
 			<Button 
    			android:id="@+id/startCapturePicutreButton" 
    			android:text="@string/startCapturePicuture" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:layout_gravity="center" 
    			/> 
    		<Button 
    			android:id="@+id/startCaptureVideoButton" 
    			android:text="@string/startCaptureVideo" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:layout_gravity="center" 
    			/> 
    		<Button 
    			android:id="@+id/stopCaptureVideoButton" 
    			android:text="@string/stopCaptureVideo" 
    			android:layout_width="wrap_content" 
    			android:layout_height="wrap_content" 
    			android:layout_gravity="center" 
    			/> 
       </LinearLayout>
   </ScrollView>
</LinearLayout>