<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFFFF">
    <!--adViewLayout为广告条容器-->
    <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />
   <HorizontalScrollView 
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="5dip"
           android:orientation="horizontal"
           >
		<Button 
		    android:id="@+id/notificationTest1Button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/notification_test1"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/notificationTest1cancelButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/notification_test1_cancel"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/notificationCancelAllButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/notification_cancel_all"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playStartBackgroundAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/start_background_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
		<Button 
		    android:id="@+id/playStopBackgroundAudioButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/stop_background_audio"
		    android:textSize="20sp"
		    android:textColor="#FF336699"
		    android:padding="5dip"/>
       </LinearLayout>
   </HorizontalScrollView>
</LinearLayout>