<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <!--adViewLayout为广告条容器-->
    <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FF336699"
                android:text="@string/download_url_text"
                android:padding="5dip"
                />
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/downloadUrlEditText"
            	android:textSize="20sp"
            	android:textColor="#FF336699"
            	android:layout_margin="5dip"
            	android:text="@string/download_url"
            	android:lines="3"
            	android:gravity="top|left"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FF336699"
                android:text="@string/download_thread_text"
                android:padding="5dip"
                />
            <EditText 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/downloadThreadNumEditText"
            	android:textSize="20sp"
            	android:textColor="#FF336699"
            	android:layout_margin="5dip"
            	android:text="@string/download_thread"
            	android:numeric="integer"
            	android:singleLine="true"
            	/>
            <Button 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/downloadButton"
                android:textSize="20sp"
                android:textColor="#FF336699"
                android:text="@string/download_button_text"
                />
            <LinearLayout 
                android:id="@+id/downloadProgressBarLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dip"
                android:orientation="vertical"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>