<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pre2">
    <!--adViewLayout为广告条容器-->
    <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     />
    <LinearLayout 
        android:id="@+id/menuListLinearLayout"
        android:layout_height="288dip"
        android:layout_width="288dip"
        android:layout_gravity="center"
        android:background="@drawable/bg_menu_list"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
	            android:id="@+id/searchButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_search"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_search"
	            android:layout_marginTop="30dip"
	            android:layout_marginBottom="10dip"
            />
            <Button
	            android:id="@+id/homeButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_home"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_home"
	            android:layout_margin="10dip"
            />
            <Button
	            android:id="@+id/channelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_channel"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_channel"
	            android:layout_marginTop="30dip"
	            android:layout_marginBottom="10dip"
            />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dip"
            >
            
            <Button
	            android:id="@+id/uploadButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_upload"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_upload"
            />
            <Button
	            android:id="@+id/closeButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/ic_menu_close"
	            android:layout_marginLeft="35dip"
	            android:layout_marginRight="35dip"
            />
            <Button
	            android:id="@+id/downloadButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_download"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_download"
            />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:gravity="center"
			android:layout_marginTop="10dip"
            >
            
            <Button
	            android:id="@+id/favoriteButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_favorite"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_favorite"
	            android:layout_marginRight="20dip"
            />
            <Button
	            android:id="@+id/moreButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/youku_more"
	            android:textSize="15sp"
	            android:gravity="bottom|center_horizontal"
	            android:textColor="@color/state_color"
	            android:background="@drawable/menu_more"
	            android:layout_marginLeft="20dip"
            />
            
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:background="@drawable/btn_menu"
        android:layout_gravity="bottom|center_horizontal"
        />
</FrameLayout>